kubernetes/main/apps/default/dashy/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: default
  labels:
    app: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
      - name: dashy
        image: lissy93/dashy:2.1.1
        ports:
          - containerPort: 80
            name: http-dashy
        volumeMounts:
          - mountPath: /app/public
            name: dashy-data
      volumes:
        - name: dashy-data
          persistentVolumeClaim:
            claimName: dashy-pvc
