kubernetes/main/apps/default/dashy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: default
spec:
  selector:
    app: dashy
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-dashy
